--- a/eureka.yml
+++ b/eureka.yml
@@ -33,5 +33,8 @@ spec:
         image: springcloud/eureka
         ports:
         - containerPort: 8761
+        env:
+        - name: EUREKA_CLIENT_SERVICEURL
+          value: http://eureka-0.eureka/eureka,http://eureka-1.eureka/eureka
   # No need to start the pods in order. We just need the stable network identity
   podManagementPolicy: "Parallel"
