--- a/eureka.yml
+++ b/eureka.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: eureka
-        image: springcloud/eureka
+        image: devopsfolks/spring-eureka-server-microservice
         ports:
         - containerPort: 8761
         env:
