--- a/eureka.yml
+++ b/eureka.yml
@@ -40,5 +40,9 @@ spec:
           value: "true"
         - name: EUREKA_CLIENT_FETCHREGISTRY
           value: "true"
+        - name: EUREKA_INSTANCE_HOSTNAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.hostname
   # No need to start the pods in order. We just need the stable network identity
   podManagementPolicy: "Parallel"
