--- a/eureka.yml
+++ b/eureka.yml
@@ -35,20 +35,12 @@ spec:
         - containerPort: 8761
         env:
         - name: _JAVA_OPTIONS
-          value: -Dlogging.level.com.netflix.discovery=DEBUG
-        - name: EUREKA_CLIENT_REGION
-          value: default
-        - name: EUREKA_CLIENT_AVAILABILITYZONES_DEFAULT
-          value: default
-        - name: EUREKA_CLIENT_SERVICEURL_DEFAULT
-          value: http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka
+          value: -Dlogging.level.com.netflix.discovery=DEBUG -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka
         - name: EUREKA_CLIENT_REGISTERWITHEUREKA
           value: "true"
         - name: EUREKA_CLIENT_FETCHREGISTRY
           value: "true"
         - name: EUREKA_INSTANCE_HOSTNAME
           value: ${spring.cloud.client.ipAddress}
-        - name: EUREKA_INSTANCE_METADATAMAP_ZONE 
-          value: default
   # No need to start the pods in order. We just need the stable network identity
   podManagementPolicy: "Parallel"
