--- a/eureka.yml
+++ b/eureka.yml
@@ -34,9 +34,9 @@ spec:
         ports:
         - containerPort: 8761
         env:
-          # Due to camelcase issues with "defaultZone", _JAVA_OPTIONS is used here
+          # Due to camelcase issues with "defaultZone" and "preferIpAddress", _JAVA_OPTIONS is used here
         - name: _JAVA_OPTIONS
-          value: -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/,http://eureka-1.eureka.default.svc.cluster.local:8761/eureka/
+          value: -Deureka.instance.preferIpAddress=false -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/,http://eureka-1.eureka.default.svc.cluster.local:8761/eureka/
         - name: EUREKA_CLIENT_REGISTERWITHEUREKA
           value: "true"
         - name: EUREKA_CLIENT_FETCHREGISTRY
@@ -46,7 +46,7 @@ spec:
           value: ${spring.cloud.client.hostname}
           # The hostnames must match with the the eureka serviceUrls, otherwise the replicas are reported as unavailable in the eureka dashboard.
           # For the other (stateless) services, this shoul probably be set to true, since their pods have no DNS-resolvable hostnames
-        - name: EUREKA_INSTANCE_PREFERIPADDRESS
-          value: "false"
+       #- name: EUREKA_INSTANCE_PREFERIPADDRESS
+       #  value: "false"
   # No need to start the pods in order. We just need the stable network identity
   podManagementPolicy: "Parallel"
