--- a/eureka.yml
+++ b/eureka.yml
@@ -36,15 +36,11 @@ spec:
         env:
           # Due to camelcase issues with "defaultZone" and "preferIpAddress", _JAVA_OPTIONS is used here
         - name: _JAVA_OPTIONS
-          value: -Deureka.instance.preferIpAddress=false -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/,http://eureka-1.eureka.default.svc.cluster.local:8761/eureka/
+          value: -Deureka.instance.preferIpAddress=false -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka:8761/eureka/,http://eureka-1.eureka:8761/eureka/
         - name: EUREKA_CLIENT_REGISTERWITHEUREKA
           value: "true"
         - name: EUREKA_CLIENT_FETCHREGISTRY
           value: "true"
-          # In the docker image, this is set to localhost. Otherwise, we could leave this empty.
-        - name: EUREKA_INSTANCE_HOSTNAME
-          value: ${spring.cloud.client.hostname}
-          # The hostnames must match with the the eureka serviceUrls, otherwise the replicas are reported as unavailable in the eureka dashboard.
           # For the other (stateless) services, this shoul probably be set to true, since their pods have no DNS-resolvable hostnames
        #- name: EUREKA_INSTANCE_PREFERIPADDRESS
        #  value: "false"
