--- a/eureka.yml
+++ b/eureka.yml
@@ -34,6 +34,10 @@ spec:
         ports:
         - containerPort: 8761
         env:
+        - name: MY_POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
           # Due to camelcase issues with "defaultZone" and "preferIpAddress", _JAVA_OPTIONS is used here
         - name: _JAVA_OPTIONS
           value: -Deureka.instance.preferIpAddress=false -Deureka.client.serviceUrl.defaultZone=http://eureka-0.eureka:8761/eureka/,http://eureka-1.eureka:8761/eureka/
@@ -41,7 +45,10 @@ spec:
           value: "true"
         - name: EUREKA_CLIENT_FETCHREGISTRY
           value: "true"
-          # For the other (stateless) services, this shoul probably be set to true, since their pods have no DNS-resolvable hostnames
+        # The hostnames must match with the the eureka serviceUrls, otherwise the replicas are reported as unavailable in the eureka dashboard      
+        - name: EUREKA_INSTANCE_HOSTNAME
+          value: ${MY_POD_NAME}.eureka
+       # For the other (stateless) services, this should probably be set to true, since their pods have no DNS-resolvable hostnames
        #- name: EUREKA_INSTANCE_PREFERIPADDRESS
        #  value: "false"
   # No need to start the pods in order. We just need the stable network identity
